# spral

./: CMakeLists.txt
cmake-modules/: Findhwloc.cmake
driver/: CMakeLists.txt
examples/C/: lsmr.c  random.c  random_matrix.c  ssids.c
examples/C/rutherford_boeing/: rb_read.c  rb_write.c
examples/C/scaling/: auction_sym.c  auction_unsym.c  equilib_sym.c  equilib_unsym.c  hungarian_sym.c  hungarian_unsym.c
examples/C/ssmfe/: hermitian.c  precond_core.c  precond_expert.c  precond_ssmfe.c  shift_invert.c
include/: CMakeLists.txt  config.h.in  spral.h  spral_random_matrix.h  spral_ssmfe.h
src/: CMakeLists.txt  compat.cxx  compat.hxx  omp.cxx
src/hw_topology/: guess_topology.cxx  hwloc_wrapper.hxx
src/ssids/: profile.cxx  profile.hxx
src/ssids/cpu/: BlockPool.hxx  BuddyAllocator.hxx  NumericSubtree.cxx  NumericSubtree.hxx  SimpleAlignedAlloc.hxx  SmallLeafNumericSubtree.hxx  SmallLeafSymbolicSubtree.hxx  SymbolicSubtree.cxx  SymbolicSubtree.hxx  ThreadStats.cxx  factor.hxx
src/ssids/cpu/kernels/: assemble.hxx  block_ldlt.hxx  calc_ld.hxx  cholesky.cxx  ldlt_app.cxx  ldlt_app.hxx  ldlt_nopiv.cxx  ldlt_tpp.cxx  verify.hxx  wrappers.cxx  wrappers.hxx
src/ssids/gpu/kernels/: assemble.cu  dense_factor.cu  dtrsv.h  reorder.cu  solve.cu  syrk.cu
tests/: CMakeLists.txt
tests/ssids/: CMakeLists.txt  kernels.cxx
tests/ssids/kernels/: block_ldlt.cxx  cholesky.cxx  framework.cxx  ldlt_app.cxx  ldlt_nopiv.cxx  ldlt_tpp.cxx
tests/ssmfe/: CMakeLists.txt  ssmfe_ciface.c
